--- a/calculator.html
+++ b/calculator.html
@@ -85,57 +85,50 @@ button {
       
 
     <script>
-        let resultDisplay = document.querySelector("#calcResultsContainer");
-        let calcResults = document.createElement("p.results");
         const numButtons = document.querySelectorAll(".numButton");
         const operatorButtons = document.querySelectorAll(".opButton");
         const equalButton = document.querySelector("#equals");
-        const clearButton = document.querySelector("#clear");
+        const clearButton = document.querySelector("#clear"); //Queries each button
 
-        resultDisplay.textContent = "";
-        let num1 = 0;
-        let num2 = 0; //Initializes values
-        let result = 0;
+        let resultDisplay = document.querySelector("#calcResultsContainer");
+          resultDisplay.textContent = "";
         let userOperator = ""
+        let num1 = 0;
+        let num2 = 0; 
+        let result = 0; //Initializes values
 
         var i = 0, length = numButtons.length;
         for (i; i < length; i++) {
             numButtons[i].addEventListener("click", function() {
             storeNumber();
         }); 
-        } //Stores numeric values
+        } //Adds number functionality, shows numeric values
 
         var i = 0, length = operatorButtons.length;
         for (i; i < length; i++) {
             operatorButtons[i].addEventListener("click", function() {
             storeOperator();
         }); 
-        } //Stores operator value
+        } //Adds operator functionality, stores operator value
 
         equalButton.addEventListener("click", function() {
+          num2 = resultDisplay.textContent;
           performOperation(num1, num2, userOperator);
-        }); //Equal button performs operations
+        }); //Evaluates the chosen numbers, performs operations
 
         clearButton.addEventListener("click", function() {
           resetDisplay();
         }) //Resets the display and sets vars to 0 or ""
 
         function storeNumber () {
-          if (resultDisplay.textContent == "" ) {
-            num1 = event.target.value;
-            resultDisplay.textContent = num1;
-            return num1;
-          } else {
-            num2 = event.target.value;
-            resultDisplay.textContent += num2;
-            return num2;
-          }
+          resultDisplay.textContent += event.target.value;
         }
 
         function storeOperator () {
           if (event.target.className.match('opButton')) {
+            num1 = resultDisplay.textContent;
             userOperator = event.target.value;
-            resultDisplay.textContent += userOperator;
+            resultDisplay.textContent = "";
             return userOperator;
           }
         }
@@ -164,21 +157,30 @@ button {
         switch (userOperator) {
           case userOperator = '+':
             console.log(add(num1, num2));
+            resultDisplay.textContent = result;
             break;
           case userOperator = '-':
             console.log(subtract(num1, num2));
+            resultDisplay.textContent = result;
             break;
           case userOperator = '*':
             console.log(multiply(num1, num2));
+            resultDisplay.textContent = result;
             break;
           case userOperator = '/':
-            console.log(divide(num1, num2));
+            if (num2 == '0') {
+              resultDisplay.textContent = "Did you pay attention in school?";
+              break;
+            } else {
+              console.log(divide(num1, num2));
+              resultDisplay.textContent = result;
+            }
             break;
           default:
               console.log("Not a valid operation")
               break;
         }
-        resultDisplay.textContent = result;
+        
       }
 
         function resetDisplay () {
